<resources>
    <string name="app_name">Progfast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login1">Login</string>
    <string name="todo">TODO</string>
    <string name="complete_name">Complete Name</string>
    <string name="username">Username</string>
    <string name="nationality">Nationality</string>
    <string name="id">ID</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="sex">Sex</string>
    <string name="DD_MM_YYYY">DD/MM/YYYY</string>
    <string name="male_or_feminine">Male or Feminine</string>
    <string name="send">Send</string>
    <string name="recover_your_account">Recover your account</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="check_in">Check in</string>
    <string name="register_your_information">Register your information</string>
</resources>